--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv="refresh" content="5; URL=https://www.bitdegree.org/" />
+  <meta http-equiv="refresh" content="0; URL=https://www.google.com" />
 </head>
